@@ -141,6 +141,15 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
                          , 'profile-foo'
                          )
 
+    def test_setBaselineContext_empty_string( self ):
+
+        tool = self._makeOne('setup_tool')
+
+        self.assertRaises( KeyError
+                         , tool.setBaselineContext
+                         , ''
+                         )
+
     def test_setBaselineContext( self ):
 
         from Products.GenericSetup.tool import IMPORT_STEPS_XML
@@ -194,7 +203,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
 
         tool = self._makeOne('setup_tool').__of__( site )
 
-        self.assertRaises( ValueError, tool.runImportStepFromProfile,
+        self.assertRaises( KeyError, tool.runImportStepFromProfile,
                            '', 'nonesuch' )
 
     def test_runImportStep_simple( self ):
@@ -207,7 +216,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry = tool.getImportStepRegistry()
         registry.registerStep( 'simple', '1', _uppercaseSiteTitle )
 
-        result = tool.runImportStepFromProfile( '', 'simple' )
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'simple' )
 
         self.assertEqual( len( result[ 'steps' ] ), 1 )
 
@@ -219,13 +228,13 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
 
         global _before_import_events
         self.assertEqual( len(_before_import_events), 1)
-        self.assertEqual(_before_import_events[0].profile_id, '')
+        self.assertEqual(_before_import_events[0].profile_id, 'snapshot-dummy')
         self.assertEqual(_before_import_events[0].steps, ['simple'])
         self.assertEqual(_before_import_events[0].full_import, True)
 
         global _after_import_events
         self.assertEqual( len(_after_import_events), 1)
-        self.assertEqual(_after_import_events[0].profile_id, '')
+        self.assertEqual(_after_import_events[0].profile_id, 'snapshot-dummy')
         self.assertEqual(_after_import_events[0].steps, ['simple'])
         self.assertEqual(_after_import_events[0].full_import, True)
 
@@ -241,7 +250,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry.registerStep( 'dependent', '1'
                              , _uppercaseSiteTitle, ( 'dependable', ) )
 
-        result = tool.runImportStepFromProfile( '', 'dependent' )
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'dependent' )
 
         self.assertEqual( len( result[ 'steps' ] ), 2 )
 
@@ -256,13 +265,13 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
 
         global _before_import_events
         self.assertEqual( len(_before_import_events), 1)
-        self.assertEqual(_before_import_events[0].profile_id, '')
+        self.assertEqual(_before_import_events[0].profile_id, 'snapshot-dummy')
         self.assertEqual(_before_import_events[0].steps, ['dependable', 'dependent'])
         self.assertEqual(_before_import_events[0].full_import, True)
 
         global _after_import_events
         self.assertEqual( len(_after_import_events), 1)
-        self.assertEqual(_after_import_events[0].profile_id, '')
+        self.assertEqual(_after_import_events[0].profile_id, 'snapshot-dummy')
         self.assertEqual(_after_import_events[0].steps, ['dependable', 'dependent'])
         self.assertEqual(_after_import_events[0].full_import, True)
 
@@ -279,7 +288,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry.registerStep( 'dependent', '1'
                              , _uppercaseSiteTitle, ( 'dependable', ) )
 
-        result = tool.runImportStepFromProfile( '', 'dependent',
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'dependent',
                                                 run_dependencies=False )
 
         self.assertEqual( len( result[ 'steps' ] ), 1 )
@@ -292,13 +301,13 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
 
         global _before_import_events
         self.assertEqual( len(_before_import_events), 1)
-        self.assertEqual(_before_import_events[0].profile_id, '')
+        self.assertEqual(_before_import_events[0].profile_id, 'snapshot-dummy')
         self.assertEqual(_before_import_events[0].steps, ['dependent'])
         self.assertEqual(_before_import_events[0].full_import, False)
 
         global _after_import_events
         self.assertEqual( len(_after_import_events), 1)
-        self.assertEqual(_after_import_events[0].profile_id, '')
+        self.assertEqual(_after_import_events[0].profile_id, 'snapshot-dummy')
         self.assertEqual(_after_import_events[0].steps, ['dependent'])
         self.assertEqual(_after_import_events[0].full_import, False)
 
@@ -310,7 +319,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry = tool.getImportStepRegistry()
         registry.registerStep( 'purging', '1', _purgeIfRequired )
 
-        result = tool.runImportStepFromProfile( '', 'purging' )
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'purging' )
 
         self.assertEqual( len( result[ 'steps' ] ), 1 )
         self.assertEqual( result[ 'steps' ][ 0 ], 'purging' )
@@ -325,7 +334,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry = tool.getImportStepRegistry()
         registry.registerStep( 'purging', '1', _purgeIfRequired )
 
-        result = tool.runImportStepFromProfile( '', 'purging',
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'purging',
                                                 purge_old=True )
 
         self.assertEqual( len( result[ 'steps' ] ), 1 )
@@ -341,7 +350,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry = tool.getImportStepRegistry()
         registry.registerStep( 'purging', '1', _purgeIfRequired )
 
-        result = tool.runImportStepFromProfile( '', 'purging',
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'purging',
                                                 purge_old=False )
 
         self.assertEqual( len( result[ 'steps' ] ), 1 )
@@ -360,7 +369,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry.registerStep( 'dependent', '1'
                              , _uppercaseSiteTitle, ( 'purging', ) )
 
-        result = tool.runImportStepFromProfile( '', 'dependent',
+        result = tool.runImportStepFromProfile( 'snapshot-dummy', 'dependent',
                                                 purge_old=False )
         self.failIf( site.purged )
 
@@ -369,14 +378,14 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         site = self._makeSite()
         tool = self._makeOne('setup_tool').__of__( site )
 
-        result = tool.runAllImportStepsFromProfile('')
+        result = tool.runAllImportStepsFromProfile('snapshot-dummy')
 
         self.assertEqual( len( result[ 'steps' ] ), 0 )
 
     def test_runAllImportSteps_sorted_default_purge( self ):
 
         TITLE = 'original title'
-        PROFILE_ID = 'testing'
+        PROFILE_ID = 'snapshot-testing'
         site = self._makeSite( TITLE )
         tool = self._makeOne('setup_tool').__of__( site )
 
@@ -414,7 +423,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
     def test_runAllImportSteps_unicode_profile_id_creates_reports( self ):
 
         TITLE = 'original title'
-        PROFILE_ID = u'testing'
+        PROFILE_ID = u'snapshot-testing'
         site = self._makeSite( TITLE )
         tool = self._makeOne('setup_tool').__of__( site )
 
@@ -445,7 +454,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry.registerStep( 'purging', '1'
                              , _purgeIfRequired )
 
-        result = tool.runAllImportStepsFromProfile( '', purge_old=True )
+        result = tool.runAllImportStepsFromProfile( 'snapshot-dummy', purge_old=True )
 
         self.assertEqual( len( result[ 'steps' ] ), 3 )
 
@@ -470,7 +479,7 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         registry.registerStep( 'purging', '1'
                              , _purgeIfRequired )
 
-        result = tool.runAllImportStepsFromProfile( '', purge_old=False )
+        result = tool.runAllImportStepsFromProfile( 'snapshot-dummy', purge_old=False )
 
         self.assertEqual( len( result[ 'steps' ] ), 3 )
 
